# lan-transfer-panel

./: .gitignore  AGENTS.md  README.md  package.json  server.js
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.login.test.tsx  App.remote.test.tsx  App.test.tsx  App.tsx  QueueWindow.test.tsx  QueueWindow.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: aria2_rpc.rs  download.rs  main.rs  remote_serve.rs  sftp.rs  ssh_exec.rs  tunnel.rs  windows_virtual_drag.rs
desktop/src/api/: client.test.ts  client.ts  types.ts
desktop/src/features/auth/: LauncherScreen.test.tsx  LauncherScreen.tsx  LoginScreen.test.tsx  LoginScreen.tsx  ServerFormScreen.test.tsx  ServerFormScreen.tsx  connectionProfiles.test.ts  connectionProfiles.ts
desktop/src/features/drag/: dragModel.test.ts  dragModel.ts  useTauriFileDrops.ts
desktop/src/features/local/: FolderTree.test.tsx  FolderTree.tsx  LocalExplorer.test.tsx  LocalExplorer.tsx  localFs.test.ts  localFs.ts
desktop/src/features/panes/: FilePane.test.tsx  FilePane.tsx
desktop/src/features/queue/: QueuePanel.test.tsx  QueuePanel.tsx
desktop/src/features/remote/: AddressBar.test.tsx  AddressBar.tsx  ExplorerSettingsPanel.tsx  FileList.test.tsx  FileList.tsx  RemoteExplorer.test.tsx  RemoteExplorer.tsx  StatusBar.test.tsx  StatusBar.tsx  Toolbar.test.tsx  Toolbar.tsx  directoryCache.ts  explorerSettings.ts  sshRemote.ts
desktop/src/i18n/: messages.test.ts  messages.ts
desktop/src/state/: useAppStore.test.ts  useAppStore.ts
desktop/src/test/: setup.ts
docs/: client-api.md
docs/superpowers/plans/: 2026-06-27-standalone-login-profiles.md  2026-06-27-tauri-desktop-client.md  2026-06-28-ssh-login-profiles.md  2026-07-03-desktop-login-launcher.md  2026-07-03-remote-explorer-layout.md
docs/superpowers/specs/: 2026-06-27-tauri-desktop-client-design.md  2026-07-03-desktop-login-launcher-design.md  2026-07-03-remote-explorer-layout-design.md
lib/: aria2-download.js  cors.js  folder-download-order.js  folder-plan-cache.js  folder-plan.js  post-download-store.js  public-folder-plan.js  ssh-archive-script.js  ssh-paths.js  ssh-python-args.js  ssh-source.js
public/: app.js  index.html  styles.css
scripts/: check-demo.js  dev-all.js  dev-server.js
test/: aria2-download.test.js  cors.test.js  folder-download-order.test.js  folder-plan-cache.test.js  folder-plan.test.js  post-download-store.test.js  public-folder-plan.test.js  ssh-archive-script.test.js  ssh-paths.test.js  ssh-python-args.test.js  ssh-source.test.js
