[package]
name = "lan-transfer-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rfd = "0.15"
tauri = { version = "2", features = ["devtools"] }
ureq = "2"
russh = { version = "0.62", features = ["ring"] }
russh-sftp = "2.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs"] }
once_cell = "1"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
windows-core = "0.58"
